# AAMF2.0

./: .gitignore  AGENT_CONTEXT.md  API_URL_FIX.md  AWS_DEPLOYMENT_GUIDE.md  AWS_DEPLOYMENT_SUMMARY.md  AWS_QUICK_REFERENCE.md  COMPLETION_SUMMARY.md  DEPLOYMENT_INDEX.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_SUMMARY_LLM.md  DEPLOYMENT_UPDATES.md  ENHANCEMENT_PROMPTS.md  FINAL_SUMMARY.md  IMPLEMENTATION_STATUS.md  INDEX.md  LLM_ENABLED_SETUP.md  PREFERENCES_CSS_FIXES.md  PREFERENCES_INTEGRATION_FIX.md  PREFERENCE_SYSTEM_COMPLETE.md  PROGRESS_UPDATE.md  README_LLM_INTEGRATION.md  REBALANCE_FLOW_VERIFICATION.md  STARTUP_GUIDE.md  TARGET_ALLOCATION_PREFERENCE_FIX.md  VALIDATION_IMPLEMENTATION.md  VERIFICATION_CHECKLIST.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/adapters/: __init__.py  bedrock.py  guardrails.py  memory.py  tracing.py
backend/app/agents/: base.py  human_approval.py  market_monitoring.py  rebalancing.py  research.py  sentiment.py  trade_execution.py
backend/app/api/routes/: approvals.py  explain.py  health.py  intelligence.py  market.py  preferences.py  rebalance.py
backend/app/contracts/: __init__.py  analysis.py  common.py  domain.py  seed.py  workflow.py
backend/app/core/: config.py
backend/app/persistence/: dynamodb_store.py  memory_store.py
backend/app/services/: langgraph_nodes.py  langgraph_state.py  orchestrator.py  policy.py
backend/asset_management_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: generate_schemas.py  run_all_services.sh  run_backend.sh
backend/tests/: test_health.py  test_market_stream.py  test_portfolios.py  test_rebalance.py
backend/tests/contracts/: test_phase1_contracts.py
backend/tests/property/: test_bedrock_adapter_properties.py  test_langgraph_properties.py  test_prompt_template_properties.py  test_validation_properties.py
docs/: README.md  architecture-diagrams.md  architecture.md
frontend/: README.md  angular.json  package-lock.json  package.json
mcp-servers/sentiment/: Dockerfile  README.md  pyproject.toml  requirements.txt  server.py
mcp-servers/sentiment/tests/: test_sentiment_mcp.py
remote-agents/research-agent/: Dockerfile  README.md  main.py  pyproject.toml
remote-agents/research-agent/app/: __init__.py  main.py
remote-agents/research-agent/tests/: test_lambda_handler.py  test_research_agent.py
schemas/: AccountProfile.schema.json  ActorContext.schema.json  AgentStageResult.schema.json  AllocationTarget.schema.json  ApprovalActionRequest.schema.json  ApprovalArtifact.schema.json  (+22 more)
(+80 files in other folders)
