[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-management-backend"
version = "0.1.0"
description = "FastAPI backend for the personal portfolio multi-agent platform"
requires-python = ">=3.13"
dependencies = [
  "boto3",
  "fastapi",
  "httpx",
  "mangum",
  "pydantic",
  "pydantic-settings",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "uvicorn[standard]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
