[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "research-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi",
  "httpx",
  "mangum",
  "pydantic",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "uvicorn[standard]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
